--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -72,7 +72,17 @@ text-align: center;
 }
 
 /* show_users style */
-/* Style pour le tableau */
+.search_input{
+    width: 50%;
+    padding: 7px;
+  }
+  .research{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 .table {
     width: 100%;
     margin-bottom: 1rem;
